# maude

./: .gitignore  COMPAT.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  pyproject.toml  test-with-governor.sh
docs/: README.md  REPOSITIONING.md  TODO_CONTEXT_UX.md  TODO_SESSION_LINEAGE.md  architecture.md  commands.md  configuration.md
docs/archive/: TODO_CONTEXT_UX.md  TODO_RELATIONAL_ROLE_INDUCTION.md
docs/archive/ingest/: also.md  chattyg.md
docs/specs/: plan-envelope-v0.md  plan-envelope-v1.md  testimony-contract-compilation.md
src/maude/: __init__.py  __main__.py  app.py  config.py  feed.py  intents.py  labels.py  report.py  session.py
src/maude/client/: __init__.py  http.py  models.py  rpc.py  transport.py
src/maude/commands/: __init__.py  base.py  desk.py  grant.py  legacy.py  report.py
src/maude/plan/: __init__.py  envelope.py  execution_request.py  ration_containment.py  runner.py  witness.py
src/maude/screens/: __init__.py  adapters.py  base.py  board.py  diff.py  manager.py  queue.py  report.py  session.py
templates/: ARCHITECTURE_TEMPLATE.md  PRODUCT_DESIGN_TEMPLATE.md  README.md  REQUIREMENTS_TEMPLATE.md
tests/: conftest.py  test_adapters_screen.py  test_app_dispatch.py  test_app_screens.py  test_board_screen.py  test_client.py  test_commands.py  test_execution_request.py  test_feed.py  test_grant_command.py  test_integration.py  test_intents.py  test_operator_client.py  test_plan_envelope.py  test_plan_runner.py  test_queue_screen.py  test_ration_containment.py  test_report.py  test_screens.py  test_session.py  test_transport.py
(+2 files in other folders)
