[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maude"
version = "0.1.0"
description = "Textual TUI frontend for the agent-governor project"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "pydantic>=2.6.0",
]

[project.scripts]
maude = "maude.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
