[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maude"
version = "2.4.0"
description = "Terminal executor for supervised agent harness runs (Agent Governor client)"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "James Beck" },
]

dependencies = [
    "textual>=1.0.0",
    "pydantic>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/unpingable/maude"
Issues = "https://github.com/unpingable/maude/issues"

[project.scripts]
maude = "maude.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maude"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
